// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolbar Rendering renders correctly 1`] = `
<div>
  <nav
    class="security--toolbar class"
  >
    <ul
      class="security--toolbar__group"
    >
      <li>
        <button
          aria-describedby="menu"
          aria-label="Toggle menu"
          class="security--button--icon security--toolbar__button security--button--icon--tooltip security--button--icon--tooltip--right"
        >
          <svg
            aria-hidden="true"
            class="security--icon security--toolbar__icon"
            focusable="false"
            height="20"
            preserveAspectRatio="xMidYMid meet"
            style="will-change:transform"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 14.8h16V16H2zm0-3.6h16v1.2H2zm0-3.6h16v1.2H2zM2 4h16v1.2H2z"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-describedby="settings"
          aria-label="Toggle settings"
          class="security--button--icon security--toolbar__button security--button--icon--tooltip security--button--icon--tooltip--right"
        >
          <svg
            aria-hidden="true"
            class="security--icon security--toolbar__icon"
            focusable="false"
            height="20"
            preserveAspectRatio="xMidYMid meet"
            style="will-change:transform"
            viewBox="0 0 32 32"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M27 16.76v-1.53l1.92-1.68A2 2 0 0 0 29.3 11l-2.36-4a2 2 0 0 0-1.73-1 2 2 0 0 0-.64.1l-2.43.82a11.35 11.35 0 0 0-1.31-.75l-.51-2.52a2 2 0 0 0-2-1.61h-4.68a2 2 0 0 0-2 1.61l-.51 2.52a11.48 11.48 0 0 0-1.32.75l-2.38-.86A2 2 0 0 0 6.79 6a2 2 0 0 0-1.73 1L2.7 11a2 2 0 0 0 .41 2.51L5 15.24v1.53l-1.89 1.68A2 2 0 0 0 2.7 21l2.36 4a2 2 0 0 0 1.73 1 2 2 0 0 0 .64-.1l2.43-.82a11.35 11.35 0 0 0 1.31.75l.51 2.52a2 2 0 0 0 2 1.61h4.72a2 2 0 0 0 2-1.61l.51-2.52a11.48 11.48 0 0 0 1.32-.75l2.42.82a2 2 0 0 0 .64.1 2 2 0 0 0 1.73-1l2.28-4a2 2 0 0 0-.41-2.51zM25.21 24l-3.43-1.16a8.86 8.86 0 0 1-2.71 1.57L18.36 28h-4.72l-.71-3.55a9.36 9.36 0 0 1-2.7-1.57L6.79 24l-2.36-4 2.72-2.4a8.9 8.9 0 0 1 0-3.13L4.43 12l2.36-4 3.43 1.16a8.86 8.86 0 0 1 2.71-1.57L13.64 4h4.72l.71 3.55a9.36 9.36 0 0 1 2.7 1.57L25.21 8l2.36 4-2.72 2.4a8.9 8.9 0 0 1 0 3.13L27.57 20z"
            />
            <path
              d="M16 22a6 6 0 1 1 6-6 5.94 5.94 0 0 1-6 6zm0-10a3.91 3.91 0 0 0-4 4 3.91 3.91 0 0 0 4 4 3.91 3.91 0 0 0 4-4 3.91 3.91 0 0 0-4-4z"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-describedby="support"
          aria-label="Toggle support"
          class="security--button--icon security--toolbar__button security--button--icon--tooltip security--button--icon--tooltip--right"
        >
          <svg
            aria-hidden="true"
            class="security--icon security--toolbar__icon"
            focusable="false"
            height="20"
            preserveAspectRatio="xMidYMid meet"
            style="will-change:transform"
            viewBox="0 0 32 32"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16 2a14 14 0 1 0 14 14A14 14 0 0 0 16 2zm0 26a12 12 0 1 1 12-12 12 12 0 0 1-12 12z"
            />
            <circle
              cx="16"
              cy="23.5"
              r="1.5"
            />
            <path
              d="M17 8h-1.5a4.49 4.49 0 0 0-4.5 4.5v.5h2v-.5a2.5 2.5 0 0 1 2.5-2.5H17a2.5 2.5 0 0 1 0 5h-2v4.5h2V17a4.5 4.5 0 0 0 0-9z"
            />
          </svg>
        </button>
      </li>
    </ul>
  </nav>
  <span
    class="security--transition"
  />
</div>
`;

exports[`Toolbar Rendering renders the HTML of the node's subtree 1`] = `
<div>
  <nav
    class="security--toolbar class"
  >
    <ul
      class="security--toolbar__group"
    >
      <li>
        <button
          aria-describedby="menu"
          aria-label="Toggle menu"
          class="security--button--icon security--toolbar__button security--button--icon--tooltip security--button--icon--tooltip--right"
        >
          <svg
            aria-hidden="true"
            class="security--icon security--toolbar__icon"
            focusable="false"
            height="20"
            preserveAspectRatio="xMidYMid meet"
            style="will-change:transform"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 14.8h16V16H2zm0-3.6h16v1.2H2zm0-3.6h16v1.2H2zM2 4h16v1.2H2z"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-describedby="settings"
          aria-label="Toggle settings"
          class="security--button--icon security--toolbar__button security--button--icon--tooltip security--button--icon--tooltip--right"
        >
          <svg
            aria-hidden="true"
            class="security--icon security--toolbar__icon"
            focusable="false"
            height="20"
            preserveAspectRatio="xMidYMid meet"
            style="will-change:transform"
            viewBox="0 0 32 32"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M27 16.76v-1.53l1.92-1.68A2 2 0 0 0 29.3 11l-2.36-4a2 2 0 0 0-1.73-1 2 2 0 0 0-.64.1l-2.43.82a11.35 11.35 0 0 0-1.31-.75l-.51-2.52a2 2 0 0 0-2-1.61h-4.68a2 2 0 0 0-2 1.61l-.51 2.52a11.48 11.48 0 0 0-1.32.75l-2.38-.86A2 2 0 0 0 6.79 6a2 2 0 0 0-1.73 1L2.7 11a2 2 0 0 0 .41 2.51L5 15.24v1.53l-1.89 1.68A2 2 0 0 0 2.7 21l2.36 4a2 2 0 0 0 1.73 1 2 2 0 0 0 .64-.1l2.43-.82a11.35 11.35 0 0 0 1.31.75l.51 2.52a2 2 0 0 0 2 1.61h4.72a2 2 0 0 0 2-1.61l.51-2.52a11.48 11.48 0 0 0 1.32-.75l2.42.82a2 2 0 0 0 .64.1 2 2 0 0 0 1.73-1l2.28-4a2 2 0 0 0-.41-2.51zM25.21 24l-3.43-1.16a8.86 8.86 0 0 1-2.71 1.57L18.36 28h-4.72l-.71-3.55a9.36 9.36 0 0 1-2.7-1.57L6.79 24l-2.36-4 2.72-2.4a8.9 8.9 0 0 1 0-3.13L4.43 12l2.36-4 3.43 1.16a8.86 8.86 0 0 1 2.71-1.57L13.64 4h4.72l.71 3.55a9.36 9.36 0 0 1 2.7 1.57L25.21 8l2.36 4-2.72 2.4a8.9 8.9 0 0 1 0 3.13L27.57 20z"
            />
            <path
              d="M16 22a6 6 0 1 1 6-6 5.94 5.94 0 0 1-6 6zm0-10a3.91 3.91 0 0 0-4 4 3.91 3.91 0 0 0 4 4 3.91 3.91 0 0 0 4-4 3.91 3.91 0 0 0-4-4z"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-describedby="support"
          aria-label="Toggle support"
          class="security--button--icon security--toolbar__button security--button--icon--tooltip security--button--icon--tooltip--right"
        >
          <svg
            aria-hidden="true"
            class="security--icon security--toolbar__icon"
            focusable="false"
            height="20"
            preserveAspectRatio="xMidYMid meet"
            style="will-change:transform"
            viewBox="0 0 32 32"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16 2a14 14 0 1 0 14 14A14 14 0 0 0 16 2zm0 26a12 12 0 1 1 12-12 12 12 0 0 1-12 12z"
            />
            <circle
              cx="16"
              cy="23.5"
              r="1.5"
            />
            <path
              d="M17 8h-1.5a4.49 4.49 0 0 0-4.5 4.5v.5h2v-.5a2.5 2.5 0 0 1 2.5-2.5H17a2.5 2.5 0 0 1 0 5h-2v4.5h2V17a4.5 4.5 0 0 0 0-9z"
            />
          </svg>
        </button>
      </li>
    </ul>
  </nav>
  <span
    class="security--transition"
  />
</div>
`;

exports[`Toolbar Rendering renders the panel correctly 1`] = `
<div>
  <nav
    className="security--toolbar class"
  >
    <ul
      className="security--toolbar__group"
    >
      <li>
        <IconButton
          aria-describedby="menu"
          aria-label="Toggle menu"
          className="security--toolbar__button security--toolbar__button--active"
          iconClassName="security--toolbar__icon"
          iconSize={20}
          label="Toggle menu"
          onClick={[Function]}
          path={null}
          renderIcon={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "render": [Function],
            }
          }
          size={null}
          state={true}
          tooltip={false}
          tooltipDirection="right"
        />
      </li>
      <li>
        <IconButton
          aria-describedby="settings"
          aria-label="Toggle settings"
          className="security--toolbar__button"
          iconClassName="security--toolbar__icon"
          iconSize={20}
          label="Toggle settings"
          onClick={[Function]}
          path={null}
          renderIcon={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "render": [Function],
            }
          }
          size={null}
          state={false}
          tooltip={true}
          tooltipDirection="right"
        />
      </li>
      <li>
        <IconButton
          aria-describedby="support"
          aria-label="Toggle support"
          className="security--toolbar__button"
          iconClassName="security--toolbar__icon"
          iconSize={20}
          label="Toggle support"
          onClick={[Function]}
          path={null}
          renderIcon={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "render": [Function],
            }
          }
          size={null}
          state={false}
          tooltip={true}
          tooltipDirection="right"
        />
      </li>
    </ul>
  </nav>
  <Transition
    className="security--toolbar"
    component="span"
    timeout={160}
  >
    <aside
      className="security--toolbar__panel"
      role="menu"
    >
      <Transition
        className="security--toolbar__content"
        component="span"
        key="menu"
        timeout={160}
      />
      <Transition
        className="security--toolbar__content"
        component="span"
        key="settings"
        timeout={160}
      />
      <Transition
        className="security--toolbar__content"
        component="span"
        key="support"
        timeout={160}
      />
    </aside>
  </Transition>
</div>
`;

exports[`Toolbar With renderAddons should click the addon icon 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "target": "camera",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Toolbar With renderAddons should focus the addon icon 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "target": "camera",
        "type": "focus",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Toolbar With renderAddons should hover the addon icon 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "target": "camera",
        "type": "mouse over",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Toolbar With renderAddons should render the addon icon tooltip 1`] = `null`;

exports[`Toolbar With renderAddons should render the addon icon tooltip 2`] = `null`;

exports[`Toolbar With renderAddons should render the toolbar with addon icon 1`] = `
<div>
  <nav
    className="security--toolbar"
  >
    <ul
      className="security--toolbar__group"
    >
      <li>
        <IconButton
          aria-describedby="menu"
          aria-label="Toggle menu"
          className="security--toolbar__button"
          iconClassName="security--toolbar__icon"
          iconSize={20}
          label="Toggle menu"
          onClick={[Function]}
          path={null}
          renderIcon={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "render": [Function],
            }
          }
          size={null}
          state={false}
          tooltip={true}
          tooltipDirection="right"
        />
      </li>
      <li>
        <IconButton
          aria-describedby="settings"
          aria-label="Toggle settings"
          className="security--toolbar__button"
          iconClassName="security--toolbar__icon"
          iconSize={20}
          label="Toggle settings"
          onClick={[Function]}
          path={null}
          renderIcon={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "render": [Function],
            }
          }
          size={null}
          state={false}
          tooltip={true}
          tooltipDirection="right"
        />
      </li>
      <li>
        <IconButton
          aria-describedby="support"
          aria-label="Toggle support"
          className="security--toolbar__button"
          iconClassName="security--toolbar__icon"
          iconSize={20}
          label="Toggle support"
          onClick={[Function]}
          path={null}
          renderIcon={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "render": [Function],
            }
          }
          size={null}
          state={false}
          tooltip={true}
          tooltipDirection="right"
        />
      </li>
      <li
        key="example-addon"
      >
        <IconButton
          aria-label="Example addon"
          className="security--toolbar__button"
          iconClassName="security--toolbar__icon"
          iconSize={20}
          label={null}
          onClick={[MockFunction]}
          onFocus={[MockFunction]}
          onMouseOver={[MockFunction]}
          path={null}
          renderIcon={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "render": [Function],
            }
          }
          size={null}
          state={false}
          tooltip={true}
          tooltipDirection="bottom"
        />
      </li>
    </ul>
  </nav>
  <Transition
    className="security--toolbar"
    component="span"
    timeout={160}
  />
</div>
`;

exports[`Toolbar With renderAddons should render the toolbar with addon icon 2`] = `
<div>
  <nav
    class="security--toolbar"
  >
    <ul
      class="security--toolbar__group"
    >
      <li>
        <button
          aria-describedby="menu"
          aria-label="Toggle menu"
          class="security--button--icon security--toolbar__button security--button--icon--tooltip security--button--icon--tooltip--right"
        >
          <svg
            aria-hidden="true"
            class="security--icon security--toolbar__icon"
            focusable="false"
            height="20"
            preserveAspectRatio="xMidYMid meet"
            style="will-change:transform"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 14.8h16V16H2zm0-3.6h16v1.2H2zm0-3.6h16v1.2H2zM2 4h16v1.2H2z"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-describedby="settings"
          aria-label="Toggle settings"
          class="security--button--icon security--toolbar__button security--button--icon--tooltip security--button--icon--tooltip--right"
        >
          <svg
            aria-hidden="true"
            class="security--icon security--toolbar__icon"
            focusable="false"
            height="20"
            preserveAspectRatio="xMidYMid meet"
            style="will-change:transform"
            viewBox="0 0 32 32"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M27 16.76v-1.53l1.92-1.68A2 2 0 0 0 29.3 11l-2.36-4a2 2 0 0 0-1.73-1 2 2 0 0 0-.64.1l-2.43.82a11.35 11.35 0 0 0-1.31-.75l-.51-2.52a2 2 0 0 0-2-1.61h-4.68a2 2 0 0 0-2 1.61l-.51 2.52a11.48 11.48 0 0 0-1.32.75l-2.38-.86A2 2 0 0 0 6.79 6a2 2 0 0 0-1.73 1L2.7 11a2 2 0 0 0 .41 2.51L5 15.24v1.53l-1.89 1.68A2 2 0 0 0 2.7 21l2.36 4a2 2 0 0 0 1.73 1 2 2 0 0 0 .64-.1l2.43-.82a11.35 11.35 0 0 0 1.31.75l.51 2.52a2 2 0 0 0 2 1.61h4.72a2 2 0 0 0 2-1.61l.51-2.52a11.48 11.48 0 0 0 1.32-.75l2.42.82a2 2 0 0 0 .64.1 2 2 0 0 0 1.73-1l2.28-4a2 2 0 0 0-.41-2.51zM25.21 24l-3.43-1.16a8.86 8.86 0 0 1-2.71 1.57L18.36 28h-4.72l-.71-3.55a9.36 9.36 0 0 1-2.7-1.57L6.79 24l-2.36-4 2.72-2.4a8.9 8.9 0 0 1 0-3.13L4.43 12l2.36-4 3.43 1.16a8.86 8.86 0 0 1 2.71-1.57L13.64 4h4.72l.71 3.55a9.36 9.36 0 0 1 2.7 1.57L25.21 8l2.36 4-2.72 2.4a8.9 8.9 0 0 1 0 3.13L27.57 20z"
            />
            <path
              d="M16 22a6 6 0 1 1 6-6 5.94 5.94 0 0 1-6 6zm0-10a3.91 3.91 0 0 0-4 4 3.91 3.91 0 0 0 4 4 3.91 3.91 0 0 0 4-4 3.91 3.91 0 0 0-4-4z"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-describedby="support"
          aria-label="Toggle support"
          class="security--button--icon security--toolbar__button security--button--icon--tooltip security--button--icon--tooltip--right"
        >
          <svg
            aria-hidden="true"
            class="security--icon security--toolbar__icon"
            focusable="false"
            height="20"
            preserveAspectRatio="xMidYMid meet"
            style="will-change:transform"
            viewBox="0 0 32 32"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16 2a14 14 0 1 0 14 14A14 14 0 0 0 16 2zm0 26a12 12 0 1 1 12-12 12 12 0 0 1-12 12z"
            />
            <circle
              cx="16"
              cy="23.5"
              r="1.5"
            />
            <path
              d="M17 8h-1.5a4.49 4.49 0 0 0-4.5 4.5v.5h2v-.5a2.5 2.5 0 0 1 2.5-2.5H17a2.5 2.5 0 0 1 0 5h-2v4.5h2V17a4.5 4.5 0 0 0 0-9z"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-label="Example addon"
          class="security--button--icon security--toolbar__button"
        >
          <svg
            aria-hidden="true"
            class="security--icon security--toolbar__icon"
            focusable="false"
            height="20"
            preserveAspectRatio="xMidYMid meet"
            style="will-change:transform"
            viewBox="0 0 32 32"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M29 26H3a1 1 0 0 1-1-1V8a1 1 0 0 1 1-1h6.46l1.71-2.55A1 1 0 0 1 12 4h8a1 1 0 0 1 .83.45L22.54 7H29a1 1 0 0 1 1 1v17a1 1 0 0 1-1 1zM4 24h24V9h-6a1 1 0 0 1-.83-.45L19.46 6h-6.92l-1.71 2.55A1 1 0 0 1 10 9H4z"
            />
            <path
              d="M16 22a6 6 0 1 1 6-6 6 6 0 0 1-6 6zm0-10a4 4 0 1 0 4 4 4 4 0 0 0-4-4z"
            />
          </svg>
        </button>
      </li>
    </ul>
  </nav>
  <span
    class="security--transition"
  />
</div>
`;

exports[`Toolbar With renderAddons should render the toolbar with addon icon 3`] = `
<button
  aria-label="Example addon"
  class="security--button--icon security--toolbar__button"
>
  <svg
    aria-hidden="true"
    class="security--icon security--toolbar__icon"
    focusable="false"
    height="20"
    preserveAspectRatio="xMidYMid meet"
    style="will-change:transform"
    viewBox="0 0 32 32"
    width="20"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M29 26H3a1 1 0 0 1-1-1V8a1 1 0 0 1 1-1h6.46l1.71-2.55A1 1 0 0 1 12 4h8a1 1 0 0 1 .83.45L22.54 7H29a1 1 0 0 1 1 1v17a1 1 0 0 1-1 1zM4 24h24V9h-6a1 1 0 0 1-.83-.45L19.46 6h-6.92l-1.71 2.55A1 1 0 0 1 10 9H4z"
    />
    <path
      d="M16 22a6 6 0 1 1 6-6 6 6 0 0 1-6 6zm0-10a4 4 0 1 0 4 4 4 4 0 0 0-4-4z"
    />
  </svg>
</button>
`;
